wandb/run-20240521_150256-xvthctsj/files/output.log

fraction of maliciou clients: 0.20 | total number of malicious clients: 200
e 0 | malicious users: 2 | test acc 0.5381 test loss 2.017982 best test_acc 0.5381
e 1 | malicious users: 11 | test acc 0.7412 test loss 1.077663 best test_acc 0.7412
e 2 | malicious users: 6 | test acc 0.8068 test loss 0.884250 best test_acc 0.8068
e 3 | malicious users: 6 | test acc 0.8550 test loss 0.529380 best test_acc 0.8550
e 4 | malicious users: 3 | test acc 0.9028 test loss 0.339901 best test_acc 0.9028
e 5 | malicious users: 7 | test acc 0.9112 test loss 0.336634 best test_acc 0.9112
[34m[1mwandb[39m[22m: [32m[41mERROR[39m[49m Error while calling W&B API: could not find agent nkeaoxv5 during agentHeartbeat (<Response [404]>)
Exception in thread Thread-1 (_heartbeat):
Traceback (most recent call last):
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/sdk/lib/retry.py", line 131, in __call__
    result = self._call_fn(*args, **kwargs)
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 369, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/sdk/lib/gql_request.py", line 59, in execute
    request.raise_for_status()
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/requests/models.py", line 1021, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 2988, in agent_heartbeat
    response = self.gql(
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 341, in gql
    ret = self._retry_gql(
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/sdk/lib/retry.py", line 147, in __call__
    retry_timedelta_triggered = check_retry_fn(e)
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/util.py", line 908, in no_retry_auth
    raise CommError(f"Permission denied to access {wandb.run.path}")
wandb.errors.CommError: Permission denied to access griffith/matrix-mnist_new/xvthctsj
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/threading.py", line 1016, in _bootstrap_inner
    self.run()
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/threading.py", line 953, in run
    self._target(*self._args, **self._kwargs)
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/agents/pyagent.py", line 167, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/apis/internal.py", line 153, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/site-packages/wandb/sdk/internal/internal_api.py", line 2999, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/ast.py", line 64, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
  File "/home/test/anaconda3/envs/FRL_test/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Permission denied to access griffith/matrix-mnist_new/xvthctsj
               ^^^^^^
SyntaxError: invalid syntax
e 6 | malicious users: 5 | test acc 0.9307 test loss 0.243138 best test_acc 0.9307
e 7 | malicious users: 8 | test acc 0.9332 test loss 0.254749 best test_acc 0.9332
e 8 | malicious users: 7 | test acc 0.9372 test loss 0.205806 best test_acc 0.9372
e 9 | malicious users: 4 | test acc 0.9412 test loss 0.204075 best test_acc 0.9412
